# LLMBuilder

./: .gitignore  README.md  config_schema.json  gpt2_config.json  kvcache.py  local_text_data.py  model_components.py  model_config_schema.json  model_loader.py  test.py  tokenizer_config_schema.json  tokenizer_configurator.py  tokenizer_dataloader.py  tokenizer_loader.py
actions/: 0_desktop-quality (macos-14, macos-aarch64, apps_llm-studio_desktop_src-tauri_target_release_llm_st....txt  0_desktop-quality (ubuntu-22.04, linux-x86_64, apps_llm-studio_desktop_src-tauri_target_release_llm....txt  0_desktop-quality (windows-2022, windows-x86_64, apps_llm-studio_desktop_src-tauri_target_release_l....txt  1_desktop-quality (macos-14, macos-aarch64, apps_llm-studio_desktop_src-tauri_target_release_llm_st....txt  1_desktop-quality (ubuntu-22.04, linux-x86_64, apps_llm-studio_desktop_src-tauri_target_release_llm....txt  1_desktop-quality (windows-2022, windows-x86_64, apps_llm-studio_desktop_src-tauri_target_release_l....txt  2_desktop-quality (macos-14, macos-aarch64, apps_llm-studio_desktop_src-tauri_target_release_llm_st....txt  2_desktop-quality (ubuntu-22.04, linux-x86_64, apps_llm-studio_desktop_src-tauri_target_release_llm....txt  2_desktop-quality (windows-2022, windows-x86_64, apps_llm-studio_desktop_src-tauri_target_release_l....txt
apps/llm-studio/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/llm-studio/desktop/src-tauri/capabilities/: main.json
apps/llm-studio/desktop/src-tauri/icons/: icon.icns
apps/llm-studio/desktop/src-tauri/src/: main.rs
apps/tokenizer-studio/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tokenizer-studio/desktop/src-tauri/capabilities/: default.json
apps/tokenizer-studio/desktop/src-tauri/icons/: icon.icns
apps/tokenizer-studio/desktop/src-tauri/src/: main.rs
datasets/: shake.txt
docs/: dataloader.md  datasets-docs.txt  llm-studio-desktop-adr.md  llm-studio-desktop-api-contract-fixtures.json  llm-studio-desktop-app-plan.md  llm-studio-desktop-release-pipeline.md  llm-studio-desktop-rfc.md  llm-studio-desktop-troubleshooting.md  llm-studio-desktop-user-guide.md  llm-studio-runpod-training-refactor-plan.md  llm-studio-simple-mode-plan.md  llm-studio-web-architecture-note.md  (+14 more)
(+469 files in other folders)
