[package]
name = "llm_studio_desktop"
version = "0.1.0"
description = "LLM Studio desktop shell"
authors = ["LLM Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
hex = "0.4"
libc = "0.2"
open = "5.3"
rand = "0.8"
rfd = "0.15"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "=2.10.2", features = [] }
tauri-codegen = "=2.5.4"
tauri-macros = "=2.5.4"
tauri-runtime = "=2.10.0"
tauri-runtime-wry = "=2.10.0"
tauri-utils = "=2.8.2"
tauri-plugin-single-instance = "=2.4.2"
tao = "=0.34.5"
ureq = { version = "2.12.1", default-features = true, features = ["json"] }
wait-timeout = "0.2"
wry = "=0.54.2"

# Pin transitive stacks that otherwise select crates newer than the repository's Rust 1.88 baseline.
icu_collections = "=2.1.1"
icu_locale_core = "=2.1.1"
icu_normalizer = "=2.1.1"
icu_normalizer_data = "=2.1.1"
icu_properties = "=2.1.1"
icu_properties_data = "=2.1.1"
icu_provider = "=2.1.1"
idna_adapter = "=1.2.1"
time = "=0.3.47"
time-core = "=0.1.8"
time-macros = "=0.2.27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading"
] }
